--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "mapbox-browserify-template",
+  "name": "hubmap",
   "version": "0.0.0",
-  "description": "A template for creating browserify Mapbox apps",
+  "description": "hubdb + mapbox-gl-js",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Bobby Sudekum",
   "license": "ISC",
   "dependencies": {
     "browserify": "^7.0.0",
-    "mapbox.js": "^2.1.4"
+    "hubdb": "^1.1.1"
   },
   "devDependencies": {
     "uglify-js": ">=1.1.0"
