--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "hubmap",
+  "name": "mapbox-browserify-template",
   "version": "0.0.0",
-  "description": "hubdb + mapbox-gl-js",
+  "description": "A template for creating browserify Mapbox apps",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "author": "Bobby Sudekum",
   "license": "ISC",
   "dependencies": {
     "browserify": "^7.0.0",
-    "hubdb": "^1.1.1"
+    "mapbox.js": "^2.1.4"
   },
   "devDependencies": {
     "uglify-js": ">=1.1.0"
